[package]
name = "lucasdb"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "1.0.64"
parking_lot = "0.12.3"
env_logger = "0.11.5"
log = "0.4.22"
bytes = "1.7.2"
prost = "0.13.3"
crc32fast = "1.4.2"
bon = "2.3.0"

[dev-dependencies]
anyhow = "1.0.89"


[[example]]
name = "basic_operation"
path = 'examples/basic_operations.rs'

[[example]]
name = "write_batch"
path = 'examples/write_batch.rs'
