[package]
name = "lucasdb"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["http"]


[dependencies]
thiserror = "1.0.64"
parking_lot = "0.12.3"
env_logger = "0.11.5"
log = "0.4.22"
bytes = "1.7.2"
prost = "0.13.3"
crc32fast = "1.4.2"
bon = "2.3.0"
crossbeam-skiplist = "0.1.3"
fs2 = "0.4.3"
memmap2 = "0.9.5"
fs_extra = "1.3.0"


[dev-dependencies]
anyhow = "1.0.89"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[example]]
name = "basic_operation"
path = 'examples/basic_operations.rs'

[[example]]
name = "write_batch"
path = 'examples/write_batch.rs'

[[example]]
name = "merge"
path = 'examples/merge.rs'

[[bench]]
name = "kv_bench"
harness = false
